Update: Stream.collect(Collectors.toList()) to Stream.toList()